package com.marisma.juegos

data class Datos(
    val juego:String,
    val genero:String,
    val fecha:String,
    val foto:String,
)
