package com.marisma.juegos.adapter

class UserProfile (val name:String, val vip:Boolean)

